--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/inquirer": "^9.0.2",
 		"@types/node": "^18.11.4",
 		"chalk": "^5.1.2",
-		"inquirer": "^9.1.4"
+		"inquirer": "^9.1.4",
+		"inquirer-search-list": "^1.2.6"
 	}
 }
