--- a/package.json
+++ b/package.json
@@ -7,6 +7,23 @@
 	"author": "Jos Broers <jos@jobrodo.nl>",
 	"source": "src/index.ts",
 	"main": "dist/index.js",
+	"packageManager": "npm@8.19.2",
+	"description": "Easily connect and manage your SSH connections.",
+	"homepage": "https://github.com/josbroers/ssh-connect/",
+	"bugs": {
+		"url": "https://github.com/josbroers/ssh-connect/issues"
+	},
+	"keywords": [
+		"nextjs",
+		"skeleton"
+	],
+	"repository": {
+		"url": "git+https://github.com/josbroers/ssh-connect.git",
+		"type": "git"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
 	"files": [
 		"dist"
 	],
@@ -23,17 +40,20 @@
 		"connect": "node dist/index.js connect connections.json",
 		"add": "node dist/index.js add connections.json",
 		"remove": "node dist/index.js remove connections.json",
-		"lerna": "npx lerna version --force-publish"
+		"lerna": "npx lerna version --force-publish",
+		"make_public": "json -I -f package.json -e 'this.private=false'"
 	},
 	"devDependencies": {
 		"@parcel/transformer-typescript-types": "^2.7.0",
 		"@types/inquirer": "^9.0.2",
 		"@types/node": "^18.11.4",
+		"json": "^11.0.0",
 		"parcel": "^2.7.0",
 		"typescript": "^4.8.4"
 	},
 	"peerDependencies": {
 		"chalk": "^5.1.2",
-		"inquirer": "^9.1.4"
+		"inquirer": "^9.1.4",
+		"inquirer-search-list": "^1.2.6"
 	}
 }
