--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@josbroers/ssh-connect",
-	"version": "0.0.5-canary.0",
+	"version": "0.0.5",
 	"private": true,
 	"license": "MIT",
 	"type": "module",
