--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@josbroers/ssh-connect",
-	"version": "1.3.1",
+	"version": "1.3.2-canary.0",
 	"private": true,
 	"license": "MIT",
 	"type": "module",
